--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -4,9 +4,21 @@
     <span>{{ i18n "footerToTheTop" }}</span>
   </a>
 </div>
-<footer class="footer">
-  COPYRIGHT (C) <a href="https://blog.lulab.net">DONGGEUN,BANG (LUBANG).</a><br />
-  ALL RIGHTS RESERVED.
-</footer>
-</body>
+<html>
+  <head>
+  </head>
+
+  <body>
+    <div class="wrap">
+      <div class="blank"></div>
+    </div>
+    <div class="footer">
+      <div class="share">    
+        <a href="https://github.com/DevPsymon" title="Github" target="_blank"><i class="fa fa-github"></i></a>
+        <a href="mailto:seongyeol.dev@gmail.com" title="Email" target="_blank"><i class="fa fa-envelope"></i></a>
+      </div>
+      COPYRIGHT (C) <a href="https://blog.lulab.net">DONGGEUN,BANG (LUBANG). ALL RIGHTS RESERVED.
+    </div>
+  </body>
 </html>
+
