--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -23,7 +23,7 @@
   {{ range .Params.tags }}
   <meta property="og:tags" content="{{ . }}">
   {{ end }}
-  <link rel="icon" href="{{ "/favicon.ico" | relURL }}" type="image/x-icon">
+  <link rel="icon" href="{{ "images/favicon.ico" | relURL }}" type="image/x-icon">
   <link rel="canonical" href="{{ .Permalink }}">
   {{ range .AlternativeOutputFormats -}}
     {{ printf `<link rel="%s" type="%s" href="%s" title="%s" />` .Rel .MediaType.Type .Permalink $.Site.Title | safeHTML }}
@@ -69,15 +69,15 @@
     </div>
     <div id="menu" class="menu hidden">
       <ul>
-        <li><a href="{{ "/" | relURL }}">#{{ .Site.Title }}</a></li>
+        <li><a href="{{ "/aboutMe" | relURL }}">#{{ i18n "menuAboutMe" }}</a></li> 
         <li><a href="{{ "/categories" | relURL }}">#{{ i18n "menuCategories" }}</a></li>
         <li><a href="{{ "/tags" | relURL }}">#{{ i18n "menuTags" }}</a></li>
-        <li><a href="{{ "/projects" | relURL }}">#{{ i18n "menuProjects" }}</a></li>        
+        <li><a href="{{ "/projects" | relURL }}">#{{ i18n "menuProjects" }}</a></li>       
       </ul>
       <input class="search" id="search-input" type="search" placeholder="{{ i18n "menuSearchKeyword" }}" value="">
     </div>
   </div>
   <div class="container">    
-    
+
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/gist-embed/2.7.1/gist-embed.min.js"></script>
