--- a/layouts/categories/terms.html
+++ b/layouts/categories/terms.html
@@ -2,29 +2,36 @@
 
 <div class="categories">
   <h1>CATEGORIES</h1>
-  <p>{{ i18n "categoriesDescription" }}</p>
   <ul>
     {{ $baseurl := .Site.BaseURL }}
     {{ $data := .Data }}
+    {{ $site := .Site }}
     {{ range $key,$value := .Data.Terms.Alphabetical }}
     <li>
-      <span class="title">
-        <a href="{{ $baseurl }}{{ $data.Plural }}/{{ $value.Name | urlize }}">
-          <i class="fa fa-angle-right icon" aria-hidden="true"></i>
-          {{ upper $value.Name }} ({{ $value.Count }}{{ i18n "categoriesCount" }})
-        </a>
-      </span>
-      <span class="links">
-        {{ range first 1 $value.WeightedPages }}
-        <a href="{{ .Permalink }}">
-          <small>{{ .Date.Format "2006-01-02" }}</small>
-          <span class="recent-title">{{ .Name }}</span>
-        </a>
-        {{ end }}
-      </span>
+      <a href="{{ $baseurl }}{{ $data.Plural }}/{{ $value.Name | urlize }}">
+        <i class="fa fa-angle-right icon" aria-hidden="true"></i>
+        {{ humanize $value.Name }}
+        <div class="count">{{ $value.Count }} posts</div>
+      </a>
     </li>
+    <div class="subcategories">
+      {{ $list := ( index $site.Data.subclist $value.Name ) }}
+      <ul>
+      {{ range $key, $value := $site.Taxonomies.subcategories.Alphabetical }}
+      {{ if in $list $value.Name }}
+        <li>
+          <a href="{{ $baseurl }}subcategories/{{ $value.Name | urlize }}">
+            <i class="fa fa-angle-right icon" aria-hidden="true"></i>
+            {{ humanize $value.Name }}
+            <div class="count">{{ $value.Count }} posts</div>
+          </a>
+        </li>
+      {{ end }}
+      {{ end }}
+      </ul>
+    </div>
     {{ end }}
-  </ul>
+  </ul>  
 </div>
 
 {{ partial "footer" . }}
