--- a/layouts/categories/terms.html
+++ b/layouts/categories/terms.html
@@ -9,7 +9,7 @@
     {{ $site := .Site }}
     {{ range $key,$value := .Data.Terms.Alphabetical }}
     <li>
-      <a href="{{ $baseurl }}{{ $data.Plural }}/{{ $value.Name | urlize }}">
+      <a href="{{ $baseurl }}/{{ $data.Plural }}/{{ $value.Name | urlize }}">
         <i class="fa fa-angle-right icon" aria-hidden="true"></i>
         {{ humanize $value.Name }}
         <div class="count">{{ $value.Count }} posts</div>
