--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -69,10 +69,10 @@
     </div>
     <div id="menu" class="menu hidden">
       <ul>
-        <li><a href="{{ "/aboutMe" | relURL }}">#{{ i18n "menuAboutMe" }}</a></li> 
+        <li><a href="{{ "/about" | relURL }}">#{{ i18n "menuAbout" }}</a></li> 
         <li><a href="{{ "/categories" | relURL }}">#{{ i18n "menuCategories" }}</a></li>
         <li><a href="{{ "/tags" | relURL }}">#{{ i18n "menuTags" }}</a></li>
-        <li><a href="{{ "/projects" | relURL }}">#{{ i18n "menuProjects" }}</a></li>       
+        <!--<li><a href="{{ "/projects" | relURL }}">#{{ i18n "menuProjects" }}</a></li> --> 
       </ul>
       <input class="search" id="search-input" type="search" placeholder="{{ i18n "menuSearchKeyword" }}" value="">
     </div>
